--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -6,7 +6,7 @@ jobs:
   lint:
     runs-on: ubuntu-20.04
     steps:
-      - uses: action/checkout@v2
+      - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
         with:
           go-version: 1.15.8
