--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,4 +13,4 @@ jobs:
         with:
           go-version: 1.15.8
       - name: Run testing
-        run: go test -v ./...
+        run: go test -race -v ./...
