--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,7 +13,4 @@ jobs:
         with:
           go-version-file: 'go.mod'
           cache: true
-      - name: lint
-        run: |
-          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.54.2
-          golangci-lint run --skip-dirs-use-default --timeout 2m0s
+      - uses: golangci/golangci-lint-action@v6
